--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.message {
+  width: fit-content;
+}
+
+.card-block-container {
+  padding-bottom: 3rem;
+  @media (min-width: 768px) {
+    width: 650px;
+  }
+  @media (min-width: 992px) {
+    width: 700px;
+  }
+  @media (min-width: 1200px) {
+    width: 750px;
+  }
+
+}
